# auction_backend

./: .env.local  README.md  TASK.md  docker-compose.yml  pyproject.toml
deploy/nginx/conf.d/: host.conf
deploy/python/: Dockerfile  uwsgi.ini
src/auction/: asgi.py  celery.py  settings.py  urls.py  wsgi.py  yasg.py
src/auction_api/: apps.py  backends.py  constants.py  tasks.py  urls.py
src/auction_api/admin/: __init__.py  auction.py  bid.py
src/auction_api/migrations/: 0001_initial.py  0002_auction.py  0003_bid.py
src/auction_api/models/: __init__.py  auction.py  base.py  bid.py  user.py
src/auction_api/serializers/: auction.py  auth.py  bid.py  login.py  registration.py  response.py  user.py
src/auction_api/services/: auth.py  customers.py  email.py  price.py
src/auction_api/views/: auction.py  auth.py  bid.py  login.py  registration.py
